# ptr

./: KGC.ipynb  README.md  Results.ipynb  TR.ipynb  combined_politicaltr_tram_summary_table_bak.xlsx  experiments.sh  models_selection_process.xlsx  ptr_results_questions.xlsx  pyproject.toml  secrets.env  tr_experiment.py  tr_summary_paper.xlsx  wd2mp.json
docker/: graphdb.yml
docker/data/ontologies/: lkg.ttl
mappings/: areas.yml  areas_rules.rml  manifestos.yml  manifestos_rules.rml  proposals.yml  proposals_rules.rml  time.yml  time_rules.rml
queries/Ordering/: Q1.sparql  Q2.sparql  Q3.sparql  Q4.sparql
queries/Storytelling/: Q1.sparql  Q2.sparql  Q3.sparql
queries/Temporal NLI/: Q1_F.sparql  Q1_T.sparql  Q2_F.sparql  Q2_T.sparql  Q3_F.sparql  Q3_T.sparql  Q4_F.sparql  Q4_T.sparql
queries/Typical Time/: Q1.sparql  Q2.sparql
src/: __init__.py  sparql_query.py
